Home.css
 .u-section-1 {
  background-image: none;
  min-height: 413px;
}

.u-section-1 .u-image-1 {
  height: 534px;
  object-position: 100% 0%;
  margin-top: -121px;
  margin-bottom: 0;
}

.u-section-1 .u-text-1 {
  font-size: 4.375rem;
  font-weight: 700;
  box-shadow: 0px 0px 0 0 rgba(0,0,0,0);
  width: 402px;
  margin: -322px auto 0;
}

.u-section-1 .u-text-2 {
  font-size: 1.25rem;
  font-style: normal;
  width: 614px;
  margin: 0 auto 60px;
}

@media (max-width: 1199px) {
  .u-section-1 .u-text-1 {
    width: auto;
    margin-right: 124px;
    margin-left: calc(((100% - 1140px) / 2) + 224px);
  }

  .u-section-1 .u-text-2 {
    margin-left: calc(((100% - 1140px) / 2) + 263px);
    margin-right: calc(((100% - 1140px) / 2) + 263px);
  }
}

@media (max-width: 991px) {
  .u-section-1 .u-image-1 {
    object-position: 51.38% 50%;
  }

  .u-section-1 .u-text-1 {
    margin-top: -434px;
    margin-right: 229px;
    margin-left: calc(((100% - 1140px) / 2) + 439px);
  }
}

@media (max-width: 767px) {
  .u-section-1 .u-text-1 {
    font-size: 3.75rem;
    margin-top: -447px;
    margin-right: 311px;
    margin-left: calc(((100% - 1140px) / 2) + 611px);
  }

  .u-section-1 .u-text-2 {
    width: auto;
    margin-right: calc(((100% - 1140px) / 2) + 540px);
    margin-left: calc(((100% - 1140px) / 2) + 600px);
  }
}

@media (max-width: 575px) {
  .u-section-1 .u-text-1 {
    width: 318px;
    font-size: 3rem;
    margin-right: auto;
    margin-left: calc(((100% - 1140px) / 2) + 411px);
  }

  .u-section-1 .u-text-2 {
    margin-right: calc(((100% - 1140px) / 2) + 390px);
    margin-left: calc(((100% - 1140px) / 2) + 750px);
  }
} .u-section-2 {
  background-image: url("images/SL-030720-28740-13.png");
  background-position: 100% 0%;
}

.u-section-2 .u-sheet-1 {
  min-height: 621px;
}

.u-section-2 .u-text-1 {
  font-size: 4.375rem;
  font-weight: 700;
  box-shadow: 0px 0px 0 0 rgba(0,0,0,0);
  width: 402px;
  margin: 60px auto 0;
}

.u-section-2 .u-text-2 {
  font-style: normal;
  text-align: center;
  margin: 15px 116px 0 813px;
}

.u-section-2 .u-image-1 {
  width: 570px;
  height: 346px;
  margin: 0 auto 0 0;
}

.u-section-2 .u-text-3 {
  font-style: normal;
  margin: -425px 753px 0 162px;
}

.u-section-2 .u-slider-1 {
  width: 388px;
  min-height: 350px;
  height: auto;
  margin: 0 27px 40px auto;
}

.u-section-2 .u-carousel-indicators-1 {
  position: absolute;
  bottom: 10px;
  width: auto;
  height: auto;
}

.u-section-2 .u-container-layout-1 {
  padding: 5px 38px;
}

.u-section-2 .u-image-2 {
  height: 312px;
  margin: 0;
}

.u-section-2 .u-carousel-item-2 {
  margin-left: 0;
  margin-right: auto;
}

.u-section-2 .u-container-layout-2 {
  padding: 10px 16px;
}

.u-section-2 .u-image-3 {
  width: 303px;
  height: 305px;
  margin: 0 auto;
}

.u-section-2 .u-carousel-item-3 {
  margin-left: auto;
  margin-right: auto;
}

.u-section-2 .u-container-layout-3 {
  padding: 10px 20px;
}

.u-section-2 .u-image-4 {
  width: 301px;
  height: 293px;
  margin: 19px auto 0;
}

.u-section-2 .u-carousel-control-1 {
  width: 38px;
  height: 38px;
  background-image: none;
  left: 0;
  position: absolute;
  right: auto;
}

.u-section-2 .u-carousel-control-2 {
  width: 38px;
  height: 38px;
  background-image: none;
  left: auto;
  position: absolute;
  right: 0;
}

@media (max-width: 1199px) {
  .u-section-2 .u-sheet-1 {
    min-height: 451px;
  }

  .u-section-2 .u-text-2 {
    margin-right: 16px;
    margin-left: 713px;
  }

  .u-section-2 .u-image-1 {
    width: 470px;
    height: 285px;
  }

  .u-section-2 .u-text-3 {
    margin-top: -364px;
    margin-right: 653px;
    margin-left: 62px;
  }

  .u-section-2 .u-image-2 {
    margin-right: initial;
    margin-left: initial;
  }
}

@media (max-width: 991px) {
  .u-section-2 .u-sheet-1 {
    min-height: 384px;
  }

  .u-section-2 .u-text-2 {
    margin-right: 0;
    margin-left: 509px;
  }

  .u-section-2 .u-image-1 {
    width: 360px;
    height: 218px;
  }

  .u-section-2 .u-text-3 {
    margin-top: -297px;
    margin-right: 495px;
    margin-left: 0;
  }

  .u-section-2 .u-container-layout-1 {
    padding-left: 30px;
    padding-right: 30px;
  }
}

@media (max-width: 767px) {
  .u-section-2 .u-sheet-1 {
    min-height: 330px;
  }

  .u-section-2 .u-text-1 {
    font-size: 3.75rem;
  }

  .u-section-2 .u-text-2 {
    margin-left: 329px;
  }

  .u-section-2 .u-image-1 {
    width: 270px;
    height: 164px;
  }

  .u-section-2 .u-text-3 {
    margin-top: -243px;
    margin-right: 315px;
  }

  .u-section-2 .u-container-layout-1 {
    padding-left: 10px;
    padding-right: 10px;
  }

  .u-section-2 .u-container-layout-2 {
    padding-left: 10px;
    padding-right: 10px;
  }

  .u-section-2 .u-container-layout-3 {
    padding-left: 10px;
    padding-right: 10px;
  }
}

@media (max-width: 575px) {
  .u-section-2 .u-sheet-1 {
    min-height: 70974px;
  }

  .u-section-2 .u-text-1 {
    font-size: 3rem;
    width: 340px;
  }

  .u-section-2 .u-text-2 {
    margin-left: 129px;
  }

  .u-section-2 .u-image-1 {
    width: 170px;
    height: 103px;
  }

  .u-section-2 .u-text-3 {
    margin-top: -182px;
    margin-right: 115px;
  }

  .u-section-2 .u-slider-1 {
    margin-right: initial;
    margin-left: initial;
    width: auto;
  }
} .u-section-3 {
  background-image: linear-gradient(0deg, rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("images/5873515.jpg");
  background-position: 50% 50%;
}

.u-section-3 .u-sheet-1 {
  min-height: 480px;
}

.u-section-3 .u-text-1 {
  margin: 72px auto 0;
}

.u-section-3 .u-icon-1 {
  width: 64px;
  height: 64px;
  margin: 21px auto 0 453px;
}

.u-section-3 .u-text-2 {
  font-size: 2.1875rem;
  margin: -60px 388px 0 auto;
}

.u-section-3 .u-icon-2 {
  width: 64px;
  height: 64px;
  margin: 4px auto 0 453px;
}

.u-section-3 .u-text-3 {
  font-size: 2.1875rem;
  text-align: left;
  margin: -60px 444px 0 auto;
}

.u-section-3 .u-icon-3 {
  width: 64px;
  height: 64px;
  margin: 4px auto 0 453px;
}

.u-section-3 .u-text-4 {
  font-size: 2.1875rem;
  text-align: left;
  margin: -60px 444px 60px auto;
}

@media (max-width: 1199px) {
  .u-section-3 .u-sheet-1 {
    min-height: 396px;
  }

  .u-section-3 .u-icon-1 {
    margin-top: 25px;
    margin-left: 361px;
  }

  .u-section-3 .u-text-2 {
    margin-top: -64px;
    margin-right: 320px;
    margin-left: 432px;
  }

  .u-section-3 .u-icon-2 {
    margin-top: -56px;
    margin-left: 374px;
  }

  .u-section-3 .u-text-3 {
    margin-right: 366px;
  }

  .u-section-3 .u-icon-3 {
    margin-left: 374px;
  }

  .u-section-3 .u-text-4 {
    margin-right: 366px;
  }
}

@media (max-width: 991px) {
  .u-section-3 .u-sheet-1 {
    min-height: 303px;
  }

  .u-section-3 .u-icon-1 {
    margin-top: 24px;
    margin-left: 259px;
  }

  .u-section-3 .u-text-2 {
    margin-right: 245px;
    margin-left: 314px;
  }

  .u-section-3 .u-icon-2 {
    margin-left: 286px;
  }

  .u-section-3 .u-text-3 {
    margin-right: 280px;
  }

  .u-section-3 .u-icon-3 {
    margin-top: 52px;
    margin-left: 286px;
  }

  .u-section-3 .u-text-4 {
    margin-right: 280px;
  }
}

@media (max-width: 767px) {
  .u-section-3 .u-sheet-1 {
    min-height: 227px;
  }

  .u-section-3 .u-icon-1 {
    margin-left: 176px;
  }

  .u-section-3 .u-text-2 {
    margin-right: 184px;
    margin-left: 217px;
  }

  .u-section-3 .u-icon-2 {
    margin-left: 215px;
  }

  .u-section-3 .u-text-3 {
    margin-right: 210px;
  }

  .u-section-3 .u-icon-3 {
    margin-left: 215px;
  }

  .u-section-3 .u-text-4 {
    margin-right: 210px;
  }
}

@media (max-width: 575px) {
  .u-section-3 .u-sheet-1 {
    min-height: 143px;
  }

  .u-section-3 .u-icon-1 {
    margin-left: 84px;
  }

  .u-section-3 .u-text-2 {
    margin-right: 116px;
    margin-left: 110px;
  }

  .u-section-3 .u-icon-2 {
    margin-left: 135px;
  }

  .u-section-3 .u-text-3 {
    margin-right: 132px;
  }

  .u-section-3 .u-icon-3 {
    margin-left: 135px;
  }

  .u-section-3 .u-text-4 {
    margin-right: 132px;
  }
}

